--- a/openday_scavenger/views/game/static/puzzle_completed.html
+++ b/openday_scavenger/views/game/static/puzzle_completed.html
@@ -7,7 +7,7 @@
         Spectacular!<br />
         Not only did you get that answer correct,<br />
         you've also managed to find and correctly answer <br />
-        💮 <b>all our puzzles</b>! 💯
+        💮 <b>all the puzzles</b>! 💯
     </p>
 
     <img class="w-50 game-complete-parrot" src="https://media.tenor.com/-HC_ksHsCeMAAAAi/parrot-dance-moves.gif"
