--- a/openday_scavenger/views/game/static/puzzle_correct.html
+++ b/openday_scavenger/views/game/static/puzzle_correct.html
@@ -4,12 +4,16 @@
 <div class="container my-4 text-center">
     <h1 class="type-h1 mb-3">🎉 That's Right! 🎉</h1>
     <p>Your answer is correct!<br /><span id="game-correct-compliment"></span></p>
+
     <p class="mt-5">There are more puzzles around, keep looking!</p>
-    <p class="text-secondary mt-5">Found another puzzle?<br />
-        <a href="/" class="btn btn-primary mt-1"><i class="fa-regular fa-puzzle-piece me-1"></i>Scan Next Puzzle</a>
+
+    <p class="text-secondary mt-5">Found another lock?<br />
+        <a href="/" class="btn btn-primary mt-1"><i class="fa-regular fa-puzzle-piece me-1"></i>Scan Next Puzzle
+            Lock</a>
     </p>
-    <p class="text-secondary mt-5">Need some help finding puzzles?<br />
-        <a href="/puzzles/map">Use our map to see where all the puzzles are!</a>
+
+    <p class="text-secondary mt-5">Need some help finding puzzle locks?<br />
+        <a href="/puzzles/map">Use our map to see where all the puzzle locks are!</a>
     </p>
 </div>
 {% endblock %}
