--- a/openday_scavenger/views/game/static/puzzle_incorrect.html
+++ b/openday_scavenger/views/game/static/puzzle_incorrect.html
@@ -8,17 +8,19 @@
     </p>
     <p>
         You can give it another crack,<br />
-        or do another puzzle and come back again later!
+        or find another puzzle and come back again later!
     </p>
     <p class="text-secondary mt-5 mb-1">Want to try again?</p>
     <a href="/puzzles/{{ puzzle }}" class="btn btn-primary"><i class="fa-regular fa-puzzle-piece me-1"></i>Try This
         Puzzle Again!</a>
 
-    <p class="text-secondary mt-5 mb-1">Found another puzzle?</p>
-    <a href="/" class="btn btn-primary"><i class="fa-regular fa-puzzle-piece me-1"></i>Scan Another Puzzle</a>
+    <p class="text-secondary mt-5">Found another lock?<br />
+        <a href="/" class="btn btn-primary mt-1"><i class="fa-regular fa-puzzle-piece me-1"></i>Scan Next Puzzle
+            Lock</a>
+    </p>
 
-    <p class="text-secondary mt-5">Need some help finding puzzles?<br />
-        <a href="/puzzles/map">Use our map to see where all the puzzles are!</a>
+    <p class="text-secondary mt-5">Need some help finding puzzle locks?<br />
+        <a href="/puzzles/map">Use our map to see where all the puzzle locks are!</a>
     </p>
 </div>
 {% endblock %}
