--- a/openday_scavenger/views/admin/templates/visitors.html
+++ b/openday_scavenger/views/admin/templates/visitors.html
@@ -14,7 +14,7 @@
             </div>
         </div>
         <div class="col-8">
-            <div class="bg-body shadow-sm admin-panel-container" hx-trigger="input from:#uid_filter delay:500ms, input from:#still_playing, click from:#clearButton" hx-include="#uid_filter" hx-get='/admin/visitors/status'>
+            <div class="bg-body shadow-sm admin-panel-container" hx-encoding='multipart/form-data' hx-trigger="load, input from:#uid_filter delay:500ms, input from:#still_playing, click from:#clearButton" hx-include="#uid_filter,#still_playing" hx-get='/admin/visitors/status'>
                 <div class="me-3 p-3">
                     Please scan an Adventure Key or type the visitor UID into the search field.
                 </div>
@@ -26,7 +26,7 @@
 
 <div class="my-4 mx-3 p-3 bg-body shadow-sm admin-panel-container">
     <h5 class="border-bottom pb-2 mb-0">Visitors</h5>
-    <form id='visitor-filter-form' class="mt-3" onsubmit="return false;" hx-encoding='multipart/form-data' hx-trigger="input from:#uid_filter delay:500ms, input from:#still_playing, click from:#clearButton" hx-get='/admin/visitors/table' hx-ext='json-enc' hx-swap="innerHTML" hx-target="#visitor-table"> 
+    <form id='visitor-filter-form' class="mt-3" onsubmit="return false;" hx-encoding='multipart/form-data' hx-trigger="load, input from:#uid_filter delay:500ms, input from:#still_playing, click from:#clearButton" hx-get='/admin/visitors/table' hx-ext='json-enc' hx-swap="innerHTML" hx-target="#visitor-table">
         <div class="mb-3">
             <label for="uid_filter" class="form-label">Filter by UID:</label>
             <div class="container-fluid px-0">
@@ -50,7 +50,7 @@
             </label>
         </div>
     </form>
-    <div id="visitor-table" hx-get="/admin/visitors/table?still_playing=true" hx-trigger="load" hx-swap="innerHTML"></div>
+    <div id="visitor-table"></div>
 </div>
 
 <script src="/static/js/html5-qrcode.js"></script>
