--- a/openday_scavenger/views/game/static/index.html
+++ b/openday_scavenger/views/game/static/index.html
@@ -9,11 +9,13 @@
         (Brought to you by Scientific Computing! 🧑‍💻)
     </p>
 
-    <p class="mt-5 text-primary fw-bold">
-        🎊 Congratulations!!
+    <p>
+        <span class="text-primary fw-bold">🎊 Congratulations!!</span><br />
+        You've completed all the puzzles!
     </p>
-    <p>Come back to the Scientific Computing booth and show us your journey key to collect
-        your prize! 🎖</p>
+    <p>
+        Come back to the Scientific Computing booth to pick up your prize! 🎖
+    </p>
 
     {% if visitor.is_authenticated %}
 
