--- a/openday_scavenger/views/admin/templates/layout.html
+++ b/openday_scavenger/views/admin/templates/layout.html
@@ -1,83 +1,101 @@
 <html>
-    <head>
-        <script src="/static/js/htmx.min.js"></script>
-        <script src="/static/js/json-enc.js"></script>
-        <script src="/static/js/bootstrap.bundle.min.js"></script>
 
-        <link href="/static/css/bootstrap.min.css" rel="stylesheet"/>
-        <link href="/static/css/fontawesome.min.css" rel="stylesheet"/>
-        <link href="/static/css/solid.min.css" rel="stylesheet"/>
-        <link href="/static/css/openday.css" rel="stylesheet"/>
-        <link href="static/admin.css" rel="stylesheet"/>
+<head>
+    <script src="/static/js/htmx.min.js"></script>
+    <script src="/static/js/json-enc.js"></script>
+    <script src="/static/js/bootstrap.bundle.min.js"></script>
 
-        <meta charset="utf-8" />   <!--It is necessary to use the UTF-8 encoding with plotly graphics to get e.g. negative signs to render correctly -->
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="/static/css/fontawesome.min.css" rel="stylesheet" />
+    <link href="/static/css/solid.min.css" rel="stylesheet" />
+    <link href="/static/css/openday.css" rel="stylesheet" />
+    <link href="static/admin.css" rel="stylesheet" />
 
-        <link id="favicon" rel="icon" type="image/x-icon" href="/static/favicon.ico">
-    </head>
-    
-    <body class="admin-bg-grey">
-        <div class="container-fluid">
-            <div class="row flex-nowrap">
-                <aside class="col-auto px-0 admin-nav-sidebar">
-                    <div class="d-flex flex-column align-items-center align-items-sm-start px-0 pt-4 text-white min-vh-100">
-                        <h1 class="mx-4 mb-5 d-none d-sm-inline">Scavenger Hunt<br />
-                            <small>Administration</small>
-                        </h1>
-                        <ul class="nav d-flex flex-column w-100" id="menu">
-                            {% if active_page == "dashboard" %}
-                            <li class="nav-item active">
+    <meta charset="utf-8" />
+    <!--It is necessary to use the UTF-8 encoding with plotly graphics to get e.g. negative signs to render correctly -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link id="favicon" rel="icon" type="image/x-icon" href="/static/favicon.ico">
+
+    {% block header %}{% endblock %}
+</head>
+
+<body class="admin-bg-grey">
+    <div class="container-fluid">
+        <div class="row flex-nowrap">
+            <aside class="col-auto px-0 admin-nav-sidebar">
+                <div class="d-flex flex-column align-items-center align-items-sm-start px-0 pt-4 text-white min-vh-100">
+                    <h1 class="mx-4 mb-5 d-none d-sm-inline">Scavenger Hunt<br />
+                        <small>Administration</small>
+                    </h1>
+                    <ul class="nav d-flex flex-column w-100" id="menu">
+                        {% if active_page == "dashboard" %}
+                        <li class="nav-item active">
                             {% else %}
-                            <li class="nav-item">
+                        <li class="nav-item">
                             {% endif %}
-                                <a href="/admin" class="nav-link align-middle">
-                                    <i class="fa-solid fa-display"></i> <span class="ms-1 d-none d-sm-inline">Dashboard</span>
-                                </a>
-                            </li>
-                            {% if active_page == "visitors" %}
-                            <li class="nav-item active">
+                            <a href="/admin" class="nav-link align-middle">
+                                <i class="fa-solid fa-display"></i> <span
+                                    class="ms-1 d-none d-sm-inline">Dashboard</span>
+                            </a>
+                        </li>
+                        {% if active_page == "visitors" %}
+                        <li class="nav-item active">
                             {% else %}
-                            <li class="nav-item">
+                        <li class="nav-item">
                             {% endif %}
-                                <a href="/admin/visitors" class="nav-link align-middle">
-                                    <i class="fa-solid fa-users"></i> <span class="ms-1 d-none d-sm-inline">Visitors</span>
-                                </a>
-                            </li>
-                            {% if active_page == "visitors_pool" %}
-                            <li class="nav-item active">
+                            <a href="/admin/visitors" class="nav-link align-middle">
+                                <i class="fa-solid fa-users"></i> <span class="ms-1 d-none d-sm-inline">Visitors</span>
+                            </a>
+                        </li>
+                        {% if active_page == "visitors_pool" %}
+                        <li class="nav-item active">
                             {% else %}
-                            <li class="nav-item">
+                        <li class="nav-item">
                             {% endif %}
-                                <a href="/admin/visitors/pool" class="nav-link align-middle">
-                                    <i class="fa-solid fa-list"></i> <span class="ms-1 d-none d-sm-inline">Visitor Pool</span>
-                                </a>
-                            </li>
-                            {% if active_page == "puzzles" %}
-                            <li class="nav-item active">
+                            <a href="/admin/visitors/pool" class="nav-link align-middle">
+                                <i class="fa-solid fa-list"></i> <span class="ms-1 d-none d-sm-inline">Visitor
+                                    Pool</span>
+                            </a>
+                        </li>
+                        {% if active_page == "puzzles" %}
+                        <li class="nav-item active">
                             {% else %}
-                            <li class="nav-item">
+                        <li class="nav-item">
                             {% endif %}
-                                <a href="/admin/puzzles" class="nav-link align-middle">
-                                    <i class="fa-solid fa-puzzle-piece"></i> <span class="ms-1 d-none d-sm-inline">Puzzles</span>
-                                </a>
-                            </li>
-                            {% if active_page == "responses" %}
-                            <li class="nav-item active">
+                            <a href="/admin/puzzles" class="nav-link align-middle">
+                                <i class="fa-solid fa-puzzle-piece"></i> <span
+                                    class="ms-1 d-none d-sm-inline">Puzzles</span>
+                            </a>
+                        </li>
+                        {% if active_page == "responses" %}
+                        <li class="nav-item active">
                             {% else %}
-                            <li class="nav-item">
+                        <li class="nav-item">
                             {% endif %}
-                                <a href="/admin/responses" class="nav-link align-middle">
-                                    <i class="fa-solid fa-comment"></i> <span class="ms-1 d-none d-sm-inline">Responses</span>
-                                </a>
-                            </li>
-                        </ul>
-                        <img src="/static/images/logo.svg" class="mt-auto mb-3">
-                    </div>
-                </aside>
-                <div class="col py-3 admin-page-content">
-                    {% block content %}{% endblock %}
+                            <a href="/admin/responses" class="nav-link align-middle">
+                                <i class="fa-solid fa-comment"></i> <span
+                                    class="ms-1 d-none d-sm-inline">Responses</span>
+                            </a>
+                        </li>
+                        {% if active_page == "map" %}
+                        <li class="nav-item active">
+                            {% else %}
+                        <li class="nav-item">
+                            {% endif %}
+                            <a href="/admin/map" class="nav-link align-middle">
+                                <i class="fa-solid fa-map"></i> <span class="ms-1 d-none d-sm-inline">Map</span>
+                            </a>
+                        </li>
+                    </ul>
+                    <img src="/static/images/logo.svg" class="mt-auto mb-3">
                 </div>
+            </aside>
+            <div class="col py-3 admin-page-content">
+                {% block content %}{% endblock %}
             </div>
         </div>
-    </body>
+    </div>
+</body>
+
 </html>
