Moved public map out of puzzles and into games view

--- a/openday_scavenger/static/css/openday.css
+++ b/openday_scavenger/static/css/openday.css
@@ -1,4 +1,3 @@
-
 /* ---- Google fonts ---- */
 @font-face {
     font-display: swap;
@@ -24,15 +23,37 @@
     src: url('/static/webfonts/poppins-v21-latin-700.woff2') format('woff2');
 }
 
-
-/* ---- Game pages ---- */
-.game-response-correct-icon {
-    font-size: 40px;
-    color: green;
+html {
+    -moz-font-feature-settings: 'kern', 'mgrk';
+    -moz-font-feature-settings: 'kern=1', 'mgrk=1';
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-feature-settings: 'kern', 'mgrk';
+    -webkit-font-smoothing: antialiased;
+    color: #2a2a2a;
+    font-family: 'Poppins', 'Tahoma', sans-serif;
+    font-feature-settings: 'kern', 'mgrk';
+    font-size: 16px;
+    font-style: normal;
+    text-rendering: optimizeLegibility;
 }
 
+::selection {
+    background-color: royalblue;
+    color: #fff;
+}
 
-.game-response-incorrect-icon {
-    font-size: 40px;
-    color: red;
+.type-h1 {
+    color: #0076c0;
+    font-size: calc(2rem * 0.9vw);
+    font-weight: bold;
+    line-height: 2.5rem;
+}
+
+/* ---- Game pages ---- */
+.game-body {
+    background-color: #f0f7fa;
+}
+
+.game-complete-parrot {
+    max-width: 348px;
 }
