--- a/openday_scavenger/puzzles/element/static/css/styles.css
+++ b/openday_scavenger/puzzles/element/static/css/styles.css
@@ -287,3 +287,70 @@ body {
   gap: 0.5rem;
 }
 /************** Popup End **************/
+
+/* ************* Mobile Animation Start **************/
+.mobile-guide {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1000;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+
+  visibility: hidden;
+}
+
+.mobile-guide-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 1rem;
+  border-radius: 1rem;
+}
+
+.mobile-guide-text p {
+  margin: 0;
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-align: center;
+  color: #333;
+  white-space: nowrap;
+}
+
+.mobile-guide-icons {
+  position: relative;
+}
+
+@keyframes rotate-mobile {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(-90deg);
+  }
+  100% {
+    transform: rotate(-90deg);
+  }
+}
+
+.mobile-icon {
+  animation: rotate-mobile 3s ease-in-out infinite;
+}
+
+.curved-arrow {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 50px;
+  height: 50px;
+  transform: rotate(-90deg);
+}
+/************** Mobile Animation End **************/
