--- a/openday_scavenger/puzzles/element/templates/index.html
+++ b/openday_scavenger/puzzles/element/templates/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>{{ title }}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link
       id="favicon"
       rel="icon"
@@ -33,6 +34,7 @@
       {% include 'question.html' %}
       <!-- {% include 'form.html' %} -->
       {% include 'popup.html' %}
+      {% include 'mobile_guide.html' %}
     </main>
   </body>
 </html>
