--- a/openday_scavenger/views/admin/templates/map.html
+++ b/openday_scavenger/views/admin/templates/map.html
@@ -15,7 +15,7 @@
 <div class="my-4 mx-3 p-3 bg-body shadow-sm admin-panel-container">
     <h5 class="border-bottom pb-2 mb-0">Generate Puzzle Location String</h5>
 
-    <div class="my-3 d-flex">
+    <div class="my-3 d-flex map-instructions">
         <div class="me-6">
             <p>
                 Click your puzzle location(s) on the map below.
@@ -27,8 +27,10 @@
             </p>
         </div>
 
-        <div class="ms-auto">
-            <button id="map-btn" class="btn btn-primary">Copy Array String to Clipboard</button>
+        <div class="ms-auto d-flex flex-column flex-nowrap align-items-start">
+            <button id="map-btn-copy" class="btn btn-primary">Copy Array String to Clipboard</button>
+
+            <button id="map-btn-clear" class="btn link-primary mt-2 p-0 d-inline-block"><u>Clear Selection</u></button>
         </div>
         <div class="ms-3" style="width: 320px;">
             <h6 id="map-array-title" class="text-primary my-1">Location Array</h6>
