style(element quiz): popup button style change for small mobile screen

--- a/openday_scavenger/puzzles/element/templates/popup.html
+++ b/openday_scavenger/puzzles/element/templates/popup.html
@@ -3,7 +3,6 @@
     <span class="close">&times;</span>
     <h2 id="element-name" class="element-name"></h2>
 
-    <style></style>
     <div class="element-details-wrapper">
       <table class="table table-striped element-details">
         <tbody>
@@ -71,7 +70,7 @@
         </tbody>
       </table>
       <div class="btn-container">
-        <button id="btn-google" class="big-btn btn-1">
+        <button id="btn-google" class="big-btn">
           <div class="btn-content">
             <span>Search for more details</span>
             <i class="fa-solid fa-magnifying-glass"></i>
@@ -92,7 +91,7 @@
             name="answer"
             pattern="[a-zA-Z]+"
           />
-          <button id="btn-answer" class="big-btn btn-2">
+          <button id="btn-answer" class="big-btn">
             <div class="btn-content">
               <span>This is my answer and submit it</span>
               <i class="fas fa-check" style="color: green"></i>
