--- a/openday_scavenger/puzzles/element/static/css/styles.css
+++ b/openday_scavenger/puzzles/element/static/css/styles.css
@@ -218,10 +218,18 @@ body {
   flex-direction: row;
   justify-content: space-between;
   position: relative;
+
+  @media (max-width: 644px) {
+    flex-direction: column;
+  }
 }
 
 .element-details {
   width: 76%;
+
+  @media (max-width: 644px) {
+    width: 100%;
+  }
 }
 
 .element-details tr td:first-child {
@@ -247,12 +255,20 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-end;
+
+  @media (max-width: 644px) {
+    width: 100%;
+  }
+}
+
+#form {
+  width: 100%;
 }
 
 .big-btn {
   background-color: #f0f0f0;
-  width: 120px;
-  height: 120px;
+  width: 100%;
+  height: 140px;
   margin: 10px 0;
   font-size: 16px;
   font-weight: normal;
@@ -262,6 +278,10 @@ body {
   transition: all 0.2s ease;
   color: #333;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
+  @media (max-width: 644px) {
+    height: 100px;
+  }
 }
 
 .big-btn:hover {
