--- a/openday_scavenger/views/game/static/index.html
+++ b/openday_scavenger/views/game/static/index.html
@@ -18,7 +18,7 @@
         You've completed all the puzzles!
     </p>
     <p>
-        Come back to the Scientific Computing booth and show us your journey key to pick up your prize! 🎖
+        Come back to the Scientific Computing booth and show us your adventure key to pick up your prize! 🎖
     </p>
 
     {% else %}
@@ -62,7 +62,7 @@
 
     {% else %}
 
-    <p>To join, come to the Scientific Computing booth to get your journey key! 🗝</p>
+    <p>To join, come to the Scientific Computing booth to get your adventure key! 🗝</p>
     <p class="mt-5">
         <span class="text-secondary fw-bold">Don't worry!!</span><br />
         No personal details are needed to register,<br />we will provide you with a randomised ID! ✏️
