--- a/openday_scavenger/views/game/static/puzzle_completed.html
+++ b/openday_scavenger/views/game/static/puzzle_completed.html
@@ -15,7 +15,8 @@
 
     <p class="mt-5">
         <span class="text-primary">⚠️ Don't forget!!</span><br />
-        Come back to the Scientific Computing booth and show us your journey key before you leave to pick up your prize!
+        Come back to the Scientific Computing booth and show us your adventure key before you leave to pick up your
+        prize!
         🎖
     </p>
     <p>We hope you had fun!</p>
