--- a/openday_scavenger/puzzles/labelthemap/templates/index.html
+++ b/openday_scavenger/puzzles/labelthemap/templates/index.html
@@ -22,16 +22,23 @@
 </head>
 
 <body>
-    <h1 class="text-center my-4">Help us label the map!</h1>
-    <p class="text-center my-4">
-        This map of
-        <a href="https://www.ansto.gov.au/facilities/australian-synchrotron" target="_blank" class="link-dark">the
-            Synchrotron</a>
-        got all scrambled up, and all the labels are in the wrong place!
-    </p>
-    <p class="text-center my-4">Help us by dragging the labels to the correct locations on the map.</p>
+    <div class="container">
+        <div class="row justify-content-center">
+        <div class="col-10">
+            <h1 class="text-center my-4">Help us label the map!</h1>
+            <p class="text-center my-4">
+                This map of
+                <a href="https://www.ansto.gov.au/facilities/australian-synchrotron" target="_blank"
+                    class="link-dark">the
+                    Synchrotron</a>
+                got all scrambled up, and all the labels are in the wrong place!
+            </p>
+            <p class="text-center my-4">Help us by dragging the labels to the correct locations on the map.</p>
+        </div>
+        </div>
+    </div>
 
-    <div class="container d-flex justify-content-center mb-4">
+    <div class="container d-flex justify-content-center mt-4 mb-4">
         <div class="map-container">
             <img src="{{ map }}" alt="Map" class="img-fluid">
             <div id="labels">
