--- a/openday_scavenger/views/admin/templates/puzzles.html
+++ b/openday_scavenger/views/admin/templates/puzzles.html
@@ -11,6 +11,12 @@
     <div class="d-flex mb-3">
         <div class="me-auto p-2"></div>
         <div class="p-2">
+            <a class="btn btn-secondary" href="/admin/puzzles/download-json"><i class="fa-regular fa-download"></i> Download JSON</a>
+        </div>
+        <div class="p-2">
+            <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#uploadJsonModal"><i class="fa-regular fa-upload"></i> Upload JSON</button>
+        </div>
+        <div class="p-2">
             <a class="btn btn-secondary" href="/admin/puzzles/download-pdf"><i class="fa-regular fa-qrcode"></i> Download All QR Codes</a>
         </div>
         <div class="p-2">
@@ -61,6 +67,43 @@
             </div>
             <div class="modal-footer">
                 <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Add Puzzle</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+            </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="modal fade modal-lg" id="uploadJsonModal" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5">Upload a JSON file with puzzle data</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+        <form id='upload-json-form' class="mt-3" hx-encoding='multipart/form-data' hx-post='/admin/puzzles/upload-json' hx-swap="innerHTML" hx-target="#puzzle-table">
+            <div class="modal-body">
+                <div class="container">
+                    <div class="row">
+                        <div class="col">
+                            <div class="mb-6 mb-3">
+                                Tip: To make sure you got the format right, use the 'Download JSON' button first and edit the existing data
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <div class="mb-6">
+                                <label for="json-file" class="form-label">File:</label>
+                                <input type="file" id="json-file" name="file" class="form-control">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Upload</button>
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
             </div>
         </form>
