--- a/openday_scavenger/puzzles/shuffleanagram/templates/index.html
+++ b/openday_scavenger/puzzles/shuffleanagram/templates/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
@@ -28,9 +29,9 @@
 
     <form id='form' method='POST' action='/submission' class="text-center" onsubmit="prepareSubmission">
         <input hidden type="text" id="name" name="name" value="{{ puzzle }}">
-        <div class="form-group">
+        <div class="form-group mb-1">
             <label for="raw-answer">Your answer:</label><br>
-            <input type="text" id="raw-answer" name="raw-answer" class="form-control d-inline-block w-50" onchange="updateAnswer();">
+            <input type="text" id="raw-answer" name="raw-answer" class="form-control d-inline-block w-60" onchange="updateAnswer();">
             <input type="hidden" id="answer" name="answer">
         </div>
         <button class="btn btn-custom">
