Update all the map urls

--- a/openday_scavenger/views/game/static/index.html
+++ b/openday_scavenger/views/game/static/index.html
@@ -55,7 +55,7 @@
     </p>
 
     <p class="text-secondary mt-5">Need some help finding puzzle locks?<br />
-        <a href="/puzzles/map">Use our map to see where all the puzzle locks are!</a>
+        <a href="/map">Use our map to see where all the puzzle locks are!</a>
     </p>
 
     {% endif %}
