add some clarification for upload behaviour

--- a/openday_scavenger/views/admin/templates/puzzles.html
+++ b/openday_scavenger/views/admin/templates/puzzles.html
@@ -94,8 +94,13 @@
                         <div class="row">
                             <div class="col">
                                 <div class="mb-6 mb-3">
+                                    Note: The uploaded data will either:
+                                    <ul>
+                                        <li>insert a new puzzle if the 'id' attribute is missing or doesn't match an existing puzzle</li>
+                                        <li>update existing data if the ID matches an existing puzzle</li>
+                                    </ul>
                                     Tip: To make sure you got the format right, use the 'Download JSON' button first and
-                                    edit the existing data
+                                    edit the existing data.
                                 </div>
                             </div>
                         </div>
