filter upload files to JSON

--- a/openday_scavenger/views/admin/templates/puzzles.html
+++ b/openday_scavenger/views/admin/templates/puzzles.html
@@ -107,8 +107,8 @@
                         <div class="row">
                             <div class="col">
                                 <div class="mb-6">
-                                    <label for="json-file" class="form-label">File:</label>
-                                    <input type="file" id="json-file" name="file" class="form-control">
+                                    <label for="json-file" class="form-label">File to upload:</label>
+                                    <input type="file" id="json-file" name="file" class="form-control" accept="application/json">
                                 </div>
                             </div>
                         </div>
