--- a/openday_scavenger/puzzles/labelthemap/templates/index.html
+++ b/openday_scavenger/puzzles/labelthemap/templates/index.html
@@ -18,7 +18,7 @@
     <!-- Puzzle specific CSS -->
     <link href="static/styles.css" rel="stylesheet">
     <!-- <script src="https://raw.githack.com/SortableJS/Sortable/master/Sortable.js"></script> -->
-    <script src="static/Sortable.js"></script>
+    <script src="/static/js/Sortable.js"></script>
 </head>
 
 <body>
