slight update to map, put number of labels to organise in the text

--- a/openday_scavenger/puzzles/labelthemap/templates/index.html
+++ b/openday_scavenger/puzzles/labelthemap/templates/index.html
@@ -25,15 +25,15 @@
     <div class="container">
         <div class="row justify-content-center">
         <div class="col-10">
-            <h1 class="text-center my-4">Help us label the map!</h1>
-            <p class="text-center my-4">
+            <h1 class="text-center my-2">Help us label the map!</h1>
+            <p class="text-center my-2">
                 This map of
                 <a href="https://www.ansto.gov.au/facilities/australian-synchrotron" target="_blank"
                     class="link-dark">the
                     Synchrotron</a>
-                got all scrambled up, and all the labels are in the wrong place!
+                got all scrambled up, and all {{labels_data|length}} labels are in the wrong place!
             </p>
-            <p class="text-center my-4">Help us by dragging the labels to the correct locations on the map.</p>
+            <p class="text-center my-2">Help us by dragging the labels to the correct locations on the map.</p>
         </div>
         </div>
     </div>
