Actually just add it in

--- a/openday_scavenger/views/admin/templates/layout.html
+++ b/openday_scavenger/views/admin/templates/layout.html
@@ -3,8 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <!-- Commenting this out because I don't want to breaking the current admin styling -->
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="/static/js/htmx.min.js"></script>
     <script src="/static/js/json-enc.js"></script>
     <script src="/static/js/bootstrap.bundle.min.js"></script>
