Putting the woman detective back in!

--- a/openday_scavenger/views/game/static/index.html
+++ b/openday_scavenger/views/game/static/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container my-4 text-center">
 
-    <h1 class="type-h1 mb-3">🗝 Unlock the Secrets of the 🗝<br />🕵️‍♂️ Australian Synchrotron 🕵️‍♂️</h1>
+    <h1 class="type-h1 mb-3">🗝 Unlock the Secrets of the 🗝<br />🕵️‍♂️ Australian Synchrotron 🕵️‍♀️</h1>
     <p>
         Welcome to the Australian Synchrotron Open Day Scavenger Hunt!<br />
         (Brought to you by Scientific Computing! 🧑‍💻)
