QR reading width should be responsive

--- a/openday_scavenger/views/game/static/index.html
+++ b/openday_scavenger/views/game/static/index.html
@@ -33,7 +33,7 @@
     </p>
 
     <p class="text-primary fw-bold mt-5">Scan puzzle lock to unlock the puzzle!</p>
-    <div class="mx-auto" id="reader" style="width: 800px;"></div>
+    <div class="mx-auto" id="reader" style="max-width: 800px; width: 100%;"></div>
 
     <div class="mt-3">
         {% if number_correct_responses > 0 %}
