--- a/openday_scavenger/views/admin/templates/layout.html
+++ b/openday_scavenger/views/admin/templates/layout.html
@@ -80,7 +80,9 @@
                             </a>
                         </li>
                     </ul>
-                    <img src="/static/images/logo.svg" class="mt-auto mb-3">
+                    <img src="/static/images/logo.svg" class="mt-auto mb-3 d-none d-sm-block">
+                    <img src="/static/images/logo-small.svg" class="mt-auto mb-3 ms-3 me-auto d-sm-none"
+                        style="width: 60px;">
                 </div>
             </aside>
             <div class="col py-3 admin-page-content">
