Header block got deleted

--- a/openday_scavenger/views/admin/templates/layout.html
+++ b/openday_scavenger/views/admin/templates/layout.html
@@ -20,6 +20,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link id="favicon" rel="icon" type="image/x-icon" href="/static/favicon.ico">
+    {% block header %}{% endblock %}
 </head>
 
 <body class="admin-bg-grey">
