--- a/openday_scavenger/views/game/static/index.html
+++ b/openday_scavenger/views/game/static/index.html
@@ -69,7 +69,7 @@
     </p>
 
     <div class="d-flex justify-content-center">
-        <img src="{{visitor_qr}}" width="50%" />
+        <img src="{{visitor_qr}}" width="50%" class="bg-white" style="margin-bottom: 150px; margin-top: 40px;" />
     </div>
     {% endif %}
 
