--- a/openday_scavenger/views/admin/templates/visitors_pool.html
+++ b/openday_scavenger/views/admin/templates/visitors_pool.html
@@ -11,7 +11,7 @@
     <form id='visitor-pool-form' class="mt-3" hx-encoding='multipart/form-data' hx-post='/admin/visitors/pool' hx-ext='json-enc' hx-swap="innerHTML" hx-target="#visitor-pool-table"> 
         <div class="mb-3">
             <label for="number_of_entries" class="form-label">Number of UIDs:</label>
-            <input type="number" id="number_of_entries" name="number_of_entries" class="form-control">
+            <input type="number" id="number_of_entries" name="number_of_entries" class="form-control" value="10">
         </div>
         <button id="create-button" class="btn btn-primary">
             <i class="fa-solid fa-plus"></i>
