--- a/openday_scavenger/puzzles/fourbyfour/templates/index.html
+++ b/openday_scavenger/puzzles/fourbyfour/templates/index.html
@@ -25,6 +25,7 @@
 
     {% if game_over %}
     <div class="alert alert-danger text-center" role="alert">
+        Oh no! Too many mistakes!
         Would you like to <a href="#" class="alert-link" hx-delete="/puzzles/{{ puzzle }}/" hx-target="body"
             hx-swap="outerHTML">start again</a>?
     </div>
@@ -68,6 +69,8 @@
 
     </div>
 
+    {% if not register_success %}
+
     <div class="text-center my-4">
         <p>Mistakes remaining:</p>
         {% for _ in range(status.mistakes_available) %}
@@ -89,28 +92,26 @@
     </div>
 
     {% endif %}
-
-    {% if message and register_success %}
-    <div class="alert alert-success text-center" role="alert">
-        {{ message }}
-    </div>
-    {% elif message %}
-    <div class="alert alert-warning text-center" role="alert">
-        {{ message }}
     {% endif %}
 
-    {% if register_success %}
+    {% if message and register_success %}
+    <div class="alert alert-success text-center mt-3" role="alert">
+        {{ message }}
+    </div>
     <form id="auto-submit-form" class="text-center" method="POST" action="/submission">
         <input hidden type="text" id="name" name="name" value="{{ puzzle }}">
         <input hidden type="text" id="visitor" name="visitor" value="{{ visitor }}">
         <input hidden type="text" id="answer" name="answer" value="{{ status.export_solution() }}">
-        <div id="submit-me" style="visibility: hidden; height: 1px;">Submitting...</div>
+        <button class="btn btn-custom">
+            Register your answer!
+        </button>
     </form>
-    <script>
-        setTimeout(function () {
-            document.getElementById('auto-submit-form').submit();
-        }, 1000); // 1 second delay
-    </script>
+
+    {% elif message %}
+
+    <div class="alert alert-warning text-center" role="alert">
+        {{ message }}
+    </div>
     {% endif %}
 
 </body>
