--- a/openday_scavenger/puzzles/newbuildings/templates/index.html
+++ b/openday_scavenger/puzzles/newbuildings/templates/index.html
@@ -12,7 +12,6 @@
 </head>
 <body >
 
-
 <div class="container">
    <h1 class="title">Count the New Buildings! 🔍</h1>
 
@@ -24,8 +23,8 @@
   <hr class="solid">
   
   <div class="grid">
-    <div class="grid-item"><img src="static/left.png" ></div>
-    <div class="grid-item"><img src="static/right.png" ></div>
+    <div class="grid-item"><img src="static/left.png" alt="old"></div>
+    <div class="grid-item"><img src="static/right.png" alt="new"></div>
   </div>
   
   <hr class="solid">
@@ -48,5 +47,3 @@
 </div>
 </body>
 </html>
-
-
