--- a/openday_scavenger/puzzles/finder/static/styles.css
+++ b/openday_scavenger/puzzles/finder/static/styles.css
@@ -17,7 +17,7 @@ body {
 }
 
 /* Style for the header */
-.heading-h1 {
+.h1 {
     background-color: #203d79;
     color: #ffffff;
     padding: 10px 0;
@@ -222,7 +222,7 @@ body {
     .word-text {
         font-size: calc(0.5rem + .9vw);
     }
-    .heading-h1 {
+    .h1 {
         font-size: calc(1rem + .9vw);
         padding: 5px;
         line-height: 1;
